--- a/source/TimeTracker.Web/index.html
+++ b/source/TimeTracker.Web/index.html
@@ -5,11 +5,13 @@
     <meta charset="utf-8" />
     <title>Time Tracker</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
-    <script src="Scripts/jquery-2.1.4.js"></script>
-    <script src="app.js"></script>
+    <script src="js/libs/jquery/jquery-2.1.4.js"></script>
+    <script src="js/timeTrackerController.js"></script>
+    <script src="js/companyController.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body>
-    <h1>TypeScript HTML App</h1>
+    <h1>Time Tracker v1.0</h1>
     <div id="companies"></div>
     <div id="error"></div>
 </body>
